--- a/tickets-app/src/main/resources/i18n/messages_pl.properties
+++ b/tickets-app/src/main/resources/i18n/messages_pl.properties
@@ -5,17 +5,17 @@ error.status=Status:
 error.message=Wiadomość:
 
 # Activation email
-email.activation.title=Aktywacja konta ticketsapp
+email.activation.title=Aktywacja konta tickets
 email.activation.greeting=Drogi {0}
-email.activation.text1=Twoje konto ticketsapp zostało utworzone, proszę kliknij poniższy link aktywacyjny:
+email.activation.text1=Twoje konto tickets zostało utworzone, proszę kliknij poniższy link aktywacyjny:
 email.activation.text2=Z uszanowaniem,
-email.signature=ticketsapp.
+email.signature=tickets.
 
 # Creation email
-email.creation.text1=Twoje konto ticketsapp zostało utworzone, kliknij poniższy link by uzyskać dostęp do niego:
+email.creation.text1=Twoje konto tickets zostało utworzone, kliknij poniższy link by uzyskać dostęp do niego:
 
 # Reset email
-email.reset.title=ticketsapp reset hasła
+email.reset.title=tickets reset hasła
 email.reset.greeting=Drogi {0}
-email.reset.text1=Dla Twojego ticketsapp konta wysłano prośbę o zresetowanie hasła, kliknij w poniższy link aby kontynuować:
+email.reset.text1=Dla Twojego tickets konta wysłano prośbę o zresetowanie hasła, kliknij w poniższy link aby kontynuować:
 email.reset.text2=Z uszanowaniem,
