--- a/tickets-app/src/main/resources/i18n/messages_en.properties
+++ b/tickets-app/src/main/resources/i18n/messages_en.properties
@@ -5,17 +5,17 @@ error.status=Status:
 error.message=Message:
 
 # Activation email
-email.activation.title=ticketsapp account activation
+email.activation.title=tickets account activation
 email.activation.greeting=Dear {0}
-email.activation.text1=Your ticketsapp account has been created, please click on the URL below to activate it:
+email.activation.text1=Your tickets account has been created, please click on the URL below to activate it:
 email.activation.text2=Regards,
-email.signature=ticketsapp Team.
+email.signature=tickets Team.
 
 # Creation email
-email.creation.text1=Your ticketsapp account has been created, please click on the URL below to access it:
+email.creation.text1=Your tickets account has been created, please click on the URL below to access it:
 
 # Reset email
-email.reset.title=ticketsapp password reset
+email.reset.title=tickets password reset
 email.reset.greeting=Dear {0}
-email.reset.text1=For your ticketsapp account a password reset was requested, please click on the URL below to reset it:
+email.reset.text1=For your tickets account a password reset was requested, please click on the URL below to reset it:
 email.reset.text2=Regards,
