Working on entities, every entity connecting to database but there is not connection between them.

--- a/tickets-app/src/main/webapp/i18n/en/event.json
+++ b/tickets-app/src/main/webapp/i18n/en/event.json
@@ -15,6 +15,7 @@
             "detail": {
                 "title": "Event"
             },
+            "categoryId": "CategoryId",
             "name": "Name",
             "eventDate": "Event Date",
             "eventAddress": "Event Address",
