Added connection between event-category and order-user.

--- a/tickets-app/src/main/webapp/i18n/en/event.json
+++ b/tickets-app/src/main/webapp/i18n/en/event.json
@@ -15,7 +15,7 @@
             "detail": {
                 "title": "Event"
             },
-            "categoryId": "CategoryId",
+            "categoryId": "Category name",
             "name": "Name",
             "eventDate": "Event Date",
             "eventAddress": "Event Address",
