Added next relations.

--- a/tickets-app/src/main/webapp/i18n/en/ticket.json
+++ b/tickets-app/src/main/webapp/i18n/en/ticket.json
@@ -12,6 +12,8 @@
             "delete": {
                 "question": "Are you sure you want to delete Ticket {{ id }}?"
             },
+            "eventId": "Event name",
+            "orderId": "User Login",
             "detail": {
                 "title": "Ticket"
             },
