--- a/tickets-app/src/main/webapp/i18n/pl/ticket.json
+++ b/tickets-app/src/main/webapp/i18n/pl/ticket.json
@@ -12,6 +12,8 @@
             "delete": {
                 "question": "Czy na pewno chcesz usunąć Ticket {{ id }}?"
             },
+            "eventId": "Nazwa wydarzenia",
+            "orderId": "Login użytkownika zamawiającego",
             "detail": {
                 "title": "Ticket"
             },
