added first name and last name to register form

--- a/tickets-app/src/main/webapp/i18n/en/global.json
+++ b/tickets-app/src/main/webapp/i18n/en/global.json
@@ -40,6 +40,10 @@
         "form": {
             "username": "Username",
             "username.placeholder": "Your username",
+            "firstName": "First Name",
+            "firstName.placeholder": " First name",
+            "lastName": "Last Name",
+            "lastName.placeholder": "Last Name",
             "currentpassword": "Current password",
             "currentpassword.placeholder": "Current password",
             "newpassword": "New password",
