--- a/tickets-app/src/main/webapp/i18n/en/order.json
+++ b/tickets-app/src/main/webapp/i18n/en/order.json
@@ -1,6 +1,7 @@
 {
     "ticketsApp": {
         "order": {
+            "clientId": "User Login",
             "home": {
                 "title": "Orders",
                 "createLabel": "Create a new Order",
