--- a/tickets-app/src/main/webapp/i18n/pl/order.json
+++ b/tickets-app/src/main/webapp/i18n/pl/order.json
@@ -1,6 +1,7 @@
 {
     "ticketsApp": {
         "order": {
+            "clientId": "Login użytkownika",
             "home": {
                 "title": "Order",
                 "createLabel": "Dodaj Order",
