--- a/tickets-app/src/main/webapp/i18n/en/home.json
+++ b/tickets-app/src/main/webapp/i18n/en/home.json
@@ -1,6 +1,6 @@
 {
     "home": {
-        "title": "Welcome, Java Hipster!",
+        "title": "Welcome on page kupbilet.org!",
         "subtitle": "This is your homepage",
         "logged": {
             "message": "You are logged in as user \"{{username}}\"."
