--- a/tickets-app/src/main/webapp/i18n/pl/home.json
+++ b/tickets-app/src/main/webapp/i18n/pl/home.json
@@ -1,6 +1,6 @@
 {
     "home": {
-        "title": "Witamy, Java Hipsterze!",
+        "title": "Witaj na stronie kupbilet.org!",
         "subtitle": "To jest twoja strona domowa",
         "logged": {
             "message": "Jesteś zalogowany jako użytkownik \"{{username}}\"."
