--- a/tickets-app/src/main/webapp/i18n/pl/global.json
+++ b/tickets-app/src/main/webapp/i18n/pl/global.json
@@ -1,9 +1,10 @@
 {
     "global": {
-        "title": "Tickets",
+        "title": "Kupbilet",
         "browsehappy": "Używasz <strong>przestarzałej</strong> przeglądarki. Proszę <a href=\"http://browsehappy.com/\">uaktualnij swoją przeglądarkę</a> aby poprawić wrażenia z użytkowania tej aplikacji.",
         "menu": {
             "home": "Strona domowa",
+            "events": "Wydarzenia",
             "jhipster-needle-menu-add-element": "JHipster will add additional menu entries here (do not translate!)",
             "entities": {
                 "main": "Encje",
@@ -106,7 +107,7 @@
             "edit": "Edytuj",
             "open": "Otwórz",
             "save": "Zapisz",
-            "view": "Widok"
+            "view": "Szczegóły"
         },
         "detail": {
             "field": "Pole",
@@ -139,5 +140,5 @@
         "idexists": "Nowy {{entityName}} nie może jeszcze mieć przypisanego ID",
         "idnull": "Błędne ID"
     },
-    "footer": "To jest stopka"
+    "footer": "Created By Marek Tałaj & Szymon Pruszek ®"
 }
