Added columns price and image to entity Events.
Added EventLite view without price and image.
Added few images, and show them in event details.

--- a/tickets-app/src/main/webapp/i18n/en/event.json
+++ b/tickets-app/src/main/webapp/i18n/en/event.json
@@ -19,8 +19,10 @@
             "name": "Name",
             "eventDate": "Event Date",
             "eventAddress": "Event Address",
+            "price": "Ticket price",
             "amountOfTickets": "Amount Of Tickets",
-            "description": "Description"
+            "description": "Description",
+            "image": "Image"
         }
     }
 }
