--- a/tickets-app/src/main/webapp/i18n/pl/event.json
+++ b/tickets-app/src/main/webapp/i18n/pl/event.json
@@ -19,8 +19,10 @@
             "name": "Nazwa wydarzenia",
             "eventDate": "Data wydarzenia",
             "eventAddress": "Adres Wydarzenia",
+            "price": "Cena biletu",
             "amountOfTickets": "Liczba dostępnych biletów",
-            "description": "Opis wydarzenia"
+            "description": "Opis wydarzenia",
+            "image": "Obrazek"
         }
     }
 }
