--- a/tickets-app/src/main/webapp/i18n/en/global.json
+++ b/tickets-app/src/main/webapp/i18n/en/global.json
@@ -5,6 +5,7 @@
         "menu": {
             "home": "Home",
             "events": "Events",
+            "shopping-cart": "Cart",
             "jhipster-needle-menu-add-element": "JHipster will add additional menu entries here (do not translate!)",
             "entities": {
                 "main": "Entities",
