--- a/tickets-app/src/main/webapp/i18n/pl/global.json
+++ b/tickets-app/src/main/webapp/i18n/pl/global.json
@@ -5,6 +5,7 @@
         "menu": {
             "home": "Strona domowa",
             "events": "Wydarzenia",
+            "shopping-cart": "Koszyk",
             "jhipster-needle-menu-add-element": "JHipster will add additional menu entries here (do not translate!)",
             "entities": {
                 "main": "Encje",
