Added translations, request that sending email after order, some validations and few small features.

--- a/tickets-app/src/main/resources/i18n/messages_en.properties
+++ b/tickets-app/src/main/resources/i18n/messages_en.properties
@@ -19,3 +19,9 @@ email.reset.title=tickets password reset
 email.reset.greeting=Dear {0}
 email.reset.text1=For your tickets account a password reset was requested, please click on the URL below to reset it:
 email.reset.text2=Regards,
+
+# sent tickets
+email.tickets.title= tickets from your order
+email.tickets.greeting=Dear {0}
+email.tickets.text1=your tickets:
+email.tickets.text2=Regards,
