--- a/tickets-app/src/main/resources/i18n/messages_pl.properties
+++ b/tickets-app/src/main/resources/i18n/messages_pl.properties
@@ -19,3 +19,9 @@ email.reset.title=tickets reset hasła
 email.reset.greeting=Drogi {0}
 email.reset.text1=Dla Twojego tickets konta wysłano prośbę o zresetowanie hasła, kliknij w poniższy link aby kontynuować:
 email.reset.text2=Z uszanowaniem,
+
+# sent tickets
+email.tickets.title= potwierdzenie zakupu biletow
+email.tickets.greeting=Dear {0}
+email.tickets.text1=Twoje bilety:
+email.tickets.text2=Regards,
