--- a/tickets-app/src/main/webapp/i18n/en/event.json
+++ b/tickets-app/src/main/webapp/i18n/en/event.json
@@ -30,7 +30,8 @@
             "yourTickets": "Your tickets:",
             "confirmation": "Confirmation page",
             "buy": "Buy now",
-            "quantity": "Quantity"
+            "quantity": "Quantity",
+            "subTotal": "Sub total"
         }
     }
 }
