--- a/tickets-app/src/main/webapp/i18n/pl/event.json
+++ b/tickets-app/src/main/webapp/i18n/pl/event.json
@@ -30,7 +30,8 @@
             "yourTickets": "Twoje bilety:",
             "confirmation": "Potwierdzenie zamówienia",
             "buy": "Kup teraz",
-            "quantity": "Ilość"
+            "quantity": "Ilość",
+            "subTotal": "Cena"
         }
     }
 }
