Sending confirmation mail done

--- a/tickets-app/src/main/resources/i18n/messages.properties
+++ b/tickets-app/src/main/resources/i18n/messages.properties
@@ -9,7 +9,7 @@ email.activation.title=tickets account activation
 email.activation.greeting=Dear {0}
 email.activation.text1=Your tickets account has been created, please click on the URL below to activate it:
 email.activation.text2=Regards,
-email.signature=tickets Team.
+email.signature=Kupbilet.org.
 
 # Creation email
 email.creation.text1=Your tickets account has been created, please click on the URL below to access it:
@@ -25,4 +25,4 @@ email.tickets.title= tickets from your order
 email.tickets.greeting=Dear {0}
 email.tickets.text1=your tickets:
 email.tickets.text2=Regards,
-
+email.tickets.text3=Thanks for your order
