--- a/tickets-app/src/main/resources/i18n/messages_pl.properties
+++ b/tickets-app/src/main/resources/i18n/messages_pl.properties
@@ -9,7 +9,7 @@ email.activation.title=Aktywacja konta tickets
 email.activation.greeting=Drogi {0}
 email.activation.text1=Twoje konto tickets zostało utworzone, proszę kliknij poniższy link aktywacyjny:
 email.activation.text2=Z uszanowaniem,
-email.signature=tickets.
+email.signature=Kupbilet.org.
 
 # Creation email
 email.creation.text1=Twoje konto tickets zostało utworzone, kliknij poniższy link by uzyskać dostęp do niego:
@@ -22,6 +22,7 @@ email.reset.text2=Z uszanowaniem,
 
 # sent tickets
 email.tickets.title= potwierdzenie zakupu biletow
-email.tickets.greeting=Dear {0}
+email.tickets.greeting=Drogi {0}
 email.tickets.text1=Twoje bilety:
-email.tickets.text2=Regards,
+email.tickets.text2=Pozdrawiamy,
+email.tickets.text3=Dziękujemy za zamówienie.
