Orders history done,
site with tickets from clicked order to do.

--- a/tickets-app/src/main/webapp/i18n/pl/global.json
+++ b/tickets-app/src/main/webapp/i18n/pl/global.json
@@ -6,6 +6,7 @@
             "home": "Strona domowa",
             "events": "Wydarzenia",
             "shopping-cart": "Koszyk",
+            "history": "Historia zamówień",
             "jhipster-needle-menu-add-element": "JHipster will add additional menu entries here (do not translate!)",
             "entities": {
                 "main": "Encje",
