--- a/tickets-app/src/main/webapp/i18n/en/global.json
+++ b/tickets-app/src/main/webapp/i18n/en/global.json
@@ -6,6 +6,7 @@
             "home": "Home",
             "events": "Events",
             "shopping-cart": "Cart",
+            "history": "Orders history",
             "jhipster-needle-menu-add-element": "JHipster will add additional menu entries here (do not translate!)",
             "entities": {
                 "main": "Entities",
